<resources>
    <string name="startapp_app_id" translatable="false">201992680</string>
    <string name="app_name">Browser</string>
    <string name="welcome_browser">Welcome to OK Browser</string>
    <string name="license_accept_text">I accept the license agreement.</string>
    <string name="start_browser">Start Browser</string>
    <string name="new_tab">New Tab</string>
    <string name="desktop_mode">Desktop Mode</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="settings">Settings</string>
    <string name="close_all_tabs">Close All Tabs</string>
    <string name="exit_browser">Exit Browser</string>
    <string name="new_hidden_tab">New Hidden Tab</string>
    <string name="incognito_mode">Incognito Mode</string>
    <string name="incognito_mode_off">Incognito Mode OFF</string>
    <string name="incognito_mode_on">Incognito Mode ON</string>
    <string name="open_new_tab">Open new tab</string>
    <string name="copy_url">Copy url</string>
    <string name="copy_url_title">Copy url title</string>
    <string name="open_image">Open image</string>
    <string name="open_image_new_tab">Open image with new tab</string>
    <string name="download_image">Download image</string>
    <string name="open_url_new_tab">Open url with new tab</string>
    <string name="downloading_image">Downloading Image</string>
    <string name="downloading_file">Downloading File</string>
    <string name="downloading_text">Downloading</string>
    <string name="history_text">History</string>
    <string name="sure_history_all_delete">Are you sure delete all history?</string>
    <string name="delete_all_history">Delete All History</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="ok_text">OK</string>
    <string name="warn_storage_permissions">Disabled Storage permission. Please go application settings and enable Storage permission.</string>
    <string name="warning_text">Warning</string>
    <string name="added_bookmark">Added Bookmark.</string>
    <string name="removed_bookmark">Removed Bookmark.</string>
    <string name="browser_settings_text">Browser Settings</string>
    <string name="web_settings_text">Web Settings</string>
    <string name="about_okbrowser_text">About OK Browser</string>
    <string name="about_text">About</string>
    <string name="about_summary">Show application informations.</string>
    <string name="other_text">Other</string>
    <string name="web_settings_summary">Show web settings.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="geo_location_text">Geo Location</string>
    <string name="javascript_text">Javascript</string>
    <string name="popups_text">Popups</string>
    <string name="local_storage_text">Local Storage</string>
    <string name="zoom_support_text">Zoom Support</string>
    <string name="zoom_buttons_text">Zoom Buttons</string>
    <string name="app_cache_text">Application Cache</string>
    <string name="save_forms_text">Save Forms</string>
    <string name="search_engine_text">Search Engine</string>
    <string name="search_engine_summary">Change or show search engine.</string>
    <string name="okbrowser_text">OK Browser</string>
    <string name="version_text">Version :</string>
    <string name="contact_text">Contact</string>
    <string name="web_page_text">Web Page</string>
    <string name="license_text">License :</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->

</resources>