<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/browser_settings_text">
        <Preference
            android:key="show_web_settings"
            android:summary="@string/web_settings_summary"
            android:title="@string/web_settings_text"
            app:icon="@drawable/ic_baseline_public_24"/>
        <ListPreference
            android:key="show_search_engines"
            android:summary="@string/search_engine_summary"
            android:title="@string/search_engine_text"
            app:icon="@drawable/ic_baseline_search_24"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/other_text">
        <Preference
            android:key="show_about"
            android:summary="@string/about_summary"
            android:title="@string/about_text"
            app:icon="@drawable/ic_baseline_info_24" />
    </PreferenceCategory>
</PreferenceScreen>