<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="item_setting"
        android:enabled="true"
        android:icon="@drawable/shortcut_settings"
        android:shortcutShortLabel="@string/settings"
        android:shortcutLongLabel="@string/settings"
        android:shortcutDisabledMessage="@string/settings">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.onurkol.app.browser"
            android:targetClass="com.onurkol.app.browser.activity.SettingsActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="item_bookmarks"
        android:enabled="true"
        android:icon="@drawable/shortcut_bookmark"
        android:shortcutShortLabel="@string/bookmarks"
        android:shortcutLongLabel="@string/bookmarks"
        android:shortcutDisabledMessage="@string/bookmarks">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.onurkol.app.browser"
            android:targetClass="com.onurkol.app.browser.activity.BookmarksActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="item_history"
        android:enabled="true"
        android:icon="@drawable/shortcut_history"
        android:shortcutShortLabel="@string/history_text"
        android:shortcutLongLabel="@string/history_text"
        android:shortcutDisabledMessage="@string/history_text">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.onurkol.app.browser"
            android:targetClass="com.onurkol.app.browser.activity.HistoryActivity" />
    </shortcut>
</shortcuts>