<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.settings.AboutActivity">

    <include
        layout="@layout/toolbar_settings"/>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/app_icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lekton_bold"
        android:text="@string/okbrowser_text"
        android:textAlignment="center"
        android:textAppearance="@style/WelcomeBodyText"
        android:textColor="@color/primary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lekton_bold"
        android:text="Onur KOL"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/primary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lekton_bold"
            android:text="@string/version_text"
            android:textAlignment="textEnd"
            android:layout_weight="0.8"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/browserVersion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lekton_bold"
            android:paddingStart="15dp"
            android:text="VERSION_TEXT"
            android:textAlignment="textStart"
            android:layout_weight="1"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lekton_bold"
            android:text="@string/license_text"
            android:layout_weight="0.8"
            android:textAlignment="textEnd"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/browserLicense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lekton_bold"
            android:paddingStart="15dp"
            android:text="LICENSE_TEXT"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:textSize="20sp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/lekton_bold"
        android:text="@string/contact_text"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/primary"/>

    <Button
        android:id="@+id/webButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/web_page_text" />

</LinearLayout>